# ZXinAnswer

./: .gitignore  README.md  auth.py  config.py  homework.py  main.py  pyproject.toml  test_main.py
adapters/: auth_api.py  cookie_store.py  homework_api.py  message_api.py  presenter.py  qr.py
docs/superpowers/plans/: 2026-06-24-multi-select-homework.md
docs/superpowers/specs/: 2026-06-24-multi-select-homework-design.md
domain/: entities.py  exceptions.py  ports.py
use_cases/: answer.py  homework.py  login.py  wait.py
