[project]
name = "zxin"
version = "0.1.0"
description = "z-xin.net 作业自动答题脚本"
requires-python = ">=3.12"
dependencies = [
    "pillow>=12.2.0",
    "qrcode>=8.2",
    "requests>=2.34.2",
    "rich>=15.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
addopts = "-ra"
